# ChangeLog for dev-java/forehead
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/forehead/ChangeLog,v 1.4 2006/12/26 17:59:59 betelgeuse Exp $

*forehead-1.0_beta5-r1 (26 Dec 2006)

  26 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  +forehead-1.0_beta5-r1.ebuild:
  Migrated to generation 2 and added the source use flag.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> Manifest:
  Fixing SHA256 digest, pass four

  14 Mar 2006; Joshua Nichols <nichoj@gentoo.org> forehead-1.0_beta5.ebuild:
  Added ~amd64 keyword (bug #111315).

*forehead-1.0_beta5 (29 Mar 2005)

  29 Mar 2005; Saleem Abdulrasool <compnerd@gentoo.org> +files/build.xml,
  +forehead-1.0_beta5.ebuild:
  Initial import; Resolves bug #70843
