@@ -10,28 +10,21 @@ EBUILD forehead-1.0_beta5-r1.ebuild 913 RMD160 8101e1c08c04fa7f9903c914115299c21
 MD5 53222bc51f715f40110974a6bf2a9980 forehead-1.0_beta5-r1.ebuild 913
 RMD160 8101e1c08c04fa7f9903c914115299c21933b98e forehead-1.0_beta5-r1.ebuild 913
 SHA256 1cb5b3e6ea5b635c0eef6a51bd84866a89b786692aadb78a197cb9da2c8152df forehead-1.0_beta5-r1.ebuild 913
-EBUILD forehead-1.0_beta5.ebuild 1044 RMD160 f7dadd15c0ffae9d56cefff802041cf7061e28d7 SHA1 55b6547016f5477be6c4aab50f89cb5e6f633a83 SHA256 155af7ff82fa33933cfb823c9738e354f3b96ba2e5bebac090699262630f0dab
-MD5 c249f3988249829314e1bf34980c435e forehead-1.0_beta5.ebuild 1044
-RMD160 f7dadd15c0ffae9d56cefff802041cf7061e28d7 forehead-1.0_beta5.ebuild 1044
-SHA256 155af7ff82fa33933cfb823c9738e354f3b96ba2e5bebac090699262630f0dab forehead-1.0_beta5.ebuild 1044
-MISC ChangeLog 782 RMD160 c0fcbef538449beb45a23953cfae7c222eb79ea4 SHA1 4d8a8298833ab640be5af891c39c761eb6be729d SHA256 1184e23d3af3d16f9834a5c169eb89b1b952108e9e6bfe2b52148461942c08da
-MD5 dc9fb9aae331aa43d3c05ee4460dee44 ChangeLog 782
-RMD160 c0fcbef538449beb45a23953cfae7c222eb79ea4 ChangeLog 782
-SHA256 1184e23d3af3d16f9834a5c169eb89b1b952108e9e6bfe2b52148461942c08da ChangeLog 782
+MISC ChangeLog 896 RMD160 adf9ab5170f0f5db832659deef3d560f977a2ec9 SHA1 60731fd42387fb0993c456b7fbd2152e8ae95339 SHA256 f4c502a0a8ad2f028da39d87bc51b2e2ec117973f1a802e1dee25380ba3605b7
+MD5 ac3c1839b8452a2cea04424ecbf21d87 ChangeLog 896
+RMD160 adf9ab5170f0f5db832659deef3d560f977a2ec9 ChangeLog 896
+SHA256 f4c502a0a8ad2f028da39d87bc51b2e2ec117973f1a802e1dee25380ba3605b7 ChangeLog 896
 MISC metadata.xml 308 RMD160 33de7a81ce13144e13716bd21f65918c0cc938b2 SHA1 5b67a7f1699038956898191aca4928696f640d6c SHA256 18737730ab8684f7b08ac54cb9d9500e6a5cac76fb710502dc411d3a2efe72ae
 MD5 0a7e021f886fb1b2e57c3ceb9eb8f9e7 metadata.xml 308
 RMD160 33de7a81ce13144e13716bd21f65918c0cc938b2 metadata.xml 308
 SHA256 18737730ab8684f7b08ac54cb9d9500e6a5cac76fb710502dc411d3a2efe72ae metadata.xml 308
-MD5 d35da21c091222a9e7718aba4a0a2396 files/digest-forehead-1.0_beta5 247
-RMD160 1d40087a28b68bacc17ecf9ce4e25a1ff62b3c39 files/digest-forehead-1.0_beta5 247
-SHA256 467b5a60d8d2d91aa1f1448a060f597fe48f6f33ef1afe68cec16832ee0282b2 files/digest-forehead-1.0_beta5 247
 MD5 d35da21c091222a9e7718aba4a0a2396 files/digest-forehead-1.0_beta5-r1 247
 RMD160 1d40087a28b68bacc17ecf9ce4e25a1ff62b3c39 files/digest-forehead-1.0_beta5-r1 247
 SHA256 467b5a60d8d2d91aa1f1448a060f597fe48f6f33ef1afe68cec16832ee0282b2 files/digest-forehead-1.0_beta5-r1 247
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.6 (GNU/Linux)
+Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFFkWMwcxLzpIGCsLQRAlhvAKCQGk6a9zLIuuVGTUu/mGCvSFbSYgCgnd+b
-b7sTs7OEfFu+7tsRpOHXG+8=
-=nWoN
+iD8DBQFGxs//cxLzpIGCsLQRAkV2AKCBQKVS6tzWo6Y9EnhtUPXI07VqMQCePiSt
+Za+mHX1YbpHUBaqG+3QohRA=
+=w/gU
 -----END PGP SIGNATURE-----
