@@ -1,3 +1,0 @@
-MD5 1af49db63178aefe24c7217430658bb5 forehead-1.0_beta5.tbz2 15665
-RMD160 9f3d66f3895d9991a1248092b40d38f5d523e3f3 forehead-1.0_beta5.tbz2 15665
-SHA256 2dd7e239a1a1f2913a3c815a54ceb1a1429540b24a1e42ead21c3b056d7d226a forehead-1.0_beta5.tbz2 15665
