@@ -23,10 +23,6 @@ RMD160 8b385d472e126a5994a7862a5dbe304cf304932b files/dist-xml-2.0.1.patch 377
 SHA256 dad962de758f785af7e0b4731a70ca2f32dc74acd5028572f93b4aa957d4a1dd files/dist-xml-2.0.1.patch 377
 DIST JayBird-2.0.1-src.zip 4899770 RMD160 50e3fb99668ca08116fec3838892e1e6ff4b8e7d SHA1 21adf4a88660c10f7afb2daddec2c4826d068fd7 SHA256 ad3d6ad4199419752281c0e11f445fd109542499d162b5356e98e6eceb25a914
 DIST Jaybird-2.1.0-src.zip 5004088 RMD160 1066f39a393ff14812c907c38aeb094c407114da SHA1 a99c4b0ed90ff1252d6f5b076bfad8087eda6faf SHA256 a96cff648af0ef01b48e3471525d2447a76015e609bbf81a54c372d2963e0214
-EBUILD jdbc-jaybird-2.0.1-r1.ebuild 2927 RMD160 0a853c217981b3236d05a086fd8b1561d938a1d0 SHA1 04d1f8c095142a02e9e71d07d4c69a7da6d50ab6 SHA256 5bcecce31510a6003891822480f782d1d1f4e4e88c3a499caf740bc05ecd6455
-MD5 d2a2c2710fa7cd463d7d9393cbe98fbc jdbc-jaybird-2.0.1-r1.ebuild 2927
-RMD160 0a853c217981b3236d05a086fd8b1561d938a1d0 jdbc-jaybird-2.0.1-r1.ebuild 2927
-SHA256 5bcecce31510a6003891822480f782d1d1f4e4e88c3a499caf740bc05ecd6455 jdbc-jaybird-2.0.1-r1.ebuild 2927
 EBUILD jdbc-jaybird-2.0.1.ebuild 2890 RMD160 2a4d1d5a49cccf07c1bcff4e8b1eb22869d83c88 SHA1 1978ed50514756ff0ac10dde2a61dd1eda6a4876 SHA256 92b860cc1d207632299fd92d95430dd1e0e1c3e31b7aa43758d85c4ff6e830b2
 MD5 fe65a0801a54d06dd7e795dda4f1c75c jdbc-jaybird-2.0.1.ebuild 2890
 RMD160 2a4d1d5a49cccf07c1bcff4e8b1eb22869d83c88 jdbc-jaybird-2.0.1.ebuild 2890
@@ -39,10 +35,10 @@ EBUILD jdbc-jaybird-2.1.0.ebuild 2684 RMD160 6ade0aef3215b195ae709b5cb89eed99edb
 MD5 1dec507c24c5189ec221033e56b58200 jdbc-jaybird-2.1.0.ebuild 2684
 RMD160 6ade0aef3215b195ae709b5cb89eed99edb2973a jdbc-jaybird-2.1.0.ebuild 2684
 SHA256 447ef0cf40d98ec1eebd719433cf6ce7b944b59d2a1a4f962822a825601118a2 jdbc-jaybird-2.1.0.ebuild 2684
-MISC ChangeLog 3818 RMD160 8b248ddadd837e72ef48d2db5758db5b7d0c1c0b SHA1 660c8ad04cd0ff96847387d795637ccd1b9ef7b7 SHA256 28d879c14b96c8b5c4bd90a6e067bfd8cb1fbd117c86add2298ff7be8a7c17b1
-MD5 2e3c63939f0353d949ac680f90d85b72 ChangeLog 3818
-RMD160 8b248ddadd837e72ef48d2db5758db5b7d0c1c0b ChangeLog 3818
-SHA256 28d879c14b96c8b5c4bd90a6e067bfd8cb1fbd117c86add2298ff7be8a7c17b1 ChangeLog 3818
+MISC ChangeLog 3931 RMD160 e3cc1aa3f3efe54ec4a7a5192efe94f8c75d2bca SHA1 6539ca379d0bb2617875b8b556ab2cc6cf31e546 SHA256 348d02d078f7df075f5ab7b5b9675b680aa4333d5a854fc85a77db1d971ff12f
+MD5 6755179f1324ddfe44d376152124138c ChangeLog 3931
+RMD160 e3cc1aa3f3efe54ec4a7a5192efe94f8c75d2bca ChangeLog 3931
+SHA256 348d02d078f7df075f5ab7b5b9675b680aa4333d5a854fc85a77db1d971ff12f ChangeLog 3931
 MISC metadata.xml 428 RMD160 2c8aa4639fd5675819c5a105d24fbc538f9bb471 SHA1 76b3cd6dba37cfabeb1ef69314b1e05b8cd7bd12 SHA256 8c5b2d28256190682037a14b86a7d4a29d2b79671ccde3631c1eb5d656223091
 MD5 37d8cbe784ce232ec1b6bd1e8cf5cde4 metadata.xml 428
 RMD160 2c8aa4639fd5675819c5a105d24fbc538f9bb471 metadata.xml 428
@@ -50,9 +46,6 @@ SHA256 8c5b2d28256190682037a14b86a7d4a29d2b79671ccde3631c1eb5d656223091 metadata
 MD5 6c6a365fa003e27aa057f1b60b09bc71 files/digest-jdbc-jaybird-2.0.1 247
 RMD160 954d1ce9745c47233fc59a5eb7d4241840051671 files/digest-jdbc-jaybird-2.0.1 247
 SHA256 daac132ade2347576fc4870f504610e430c89211b336bfbcf262ee81e7473869 files/digest-jdbc-jaybird-2.0.1 247
-MD5 6c6a365fa003e27aa057f1b60b09bc71 files/digest-jdbc-jaybird-2.0.1-r1 247
-RMD160 954d1ce9745c47233fc59a5eb7d4241840051671 files/digest-jdbc-jaybird-2.0.1-r1 247
-SHA256 daac132ade2347576fc4870f504610e430c89211b336bfbcf262ee81e7473869 files/digest-jdbc-jaybird-2.0.1-r1 247
 MD5 2d275643a2fddc9000f8d416dd908e6b files/digest-jdbc-jaybird-2.1.0 247
 RMD160 de7d5a5a54a1076bf0dc82ccba145e2843dd2c89 files/digest-jdbc-jaybird-2.1.0 247
 SHA256 1bde00cf88acb3441873dada2c0efe24051a02bd5b35a0044ee28e169d516638 files/digest-jdbc-jaybird-2.1.0 247
@@ -62,7 +55,7 @@ SHA256 1bde00cf88acb3441873dada2c0efe24051a02bd5b35a0044ee28e169d516638 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGxhMicxLzpIGCsLQRAtGRAJ9Kig+5D8vmQhL4PTgTMn7B897HAwCdGDD5
-jKYwHv3j/yS6Gm93xAEPOnw=
-=MPZn
+iD8DBQFGxtB9cxLzpIGCsLQRAoqDAKCGg+D5H5U5pE/JwukpOoEEaJdEEwCfW8lf
+QWrsm5KvCuhTe7i4D1rvSjQ=
+=5R4k
 -----END PGP SIGNATURE-----
