@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/forehead
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/forehead/ChangeLog,v 1.4 2006/12/26 17:59:59 betelgeuse Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/forehead/ChangeLog,v 1.5 2007/08/18 10:54:50 betelgeuse Exp $
+
+  18 Aug 2007; Petteri Räty <betelgeuse@gentoo.org>
+  -forehead-1.0_beta5.ebuild:
+  Remove generation 1 ebuild.
 
 *forehead-1.0_beta5-r1 (26 Dec 2006)
 
